--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,34 @@
+{% load static %}
 <html>
     <head>
         <title>Django Tut blog</title>
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
     </head>
     <body>
-        <div>
+        <div class="page-header">
             <h1><a href="/">Django Tut Blog</a></h1>
         </div>
 
-        <div>
+        <div class="post">
+            <div class="content container">
+    <div class="row">
+        <div class="col-md-8">
             {% for post in posts %}
-                <div>
-                    <p>published: {{ post.published_date }}</p>
+                <div class="post">
+                    <div class="date">
+                        <p>published: {{ post.published_date }}</p>
+                    </div>
                     <h2><a href="">{{ post.title }}</a></h2>
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
             {% endfor %}
+        </div>
+    </div>
+</div>
         </div>
     </body>
 </html>
